# OAC_Planner

./: README.md  Update Record.md
A-LOAM/: ._.gitignore  ._CMakeLists.txt  ._LICENSE  ._README.md  ._docker  ._include  ._launch  ._package.xml  ._picture  ._rviz_cfg  ._src
A-LOAM/docker/: ._Dockerfile  ._Makefile  ._run.sh
A-LOAM/include/: ._aloam_velodyne
A-LOAM/launch/: ._aloam_velodyne_HDL_32.launch  ._aloam_velodyne_HDL_64.launch  ._aloam_velodyne_VLP_16.launch  ._kitti_helper.launch  aloam_velodyne_HDL_32.launch
A-LOAM/rviz_cfg/: ._aloam_velodyne.rviz  aloam_velodyne.rviz
A-LOAM/src/: ._kittiHelper.cpp  ._laserMapping.cpp  ._laserOdometry.cpp  ._lidarFactor.hpp  ._scanRegistration.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
FAST_LIO/: CMakeLists.txt
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: horizon.yaml  mid360.yaml  velodyne.yaml
FAST_LIO/launch/: mapping_horizon.launch  mapping_mid360.launch  mapping_velodyne.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz
FAST_LIO/src/: laserMapping.cpp  livox_repub.cpp  preprocess.cpp
FAST_LIO_SAM/: CMakeLists.txt
FAST_LIO_SAM/Log/: mat_pre.txt
FAST_LIO_SAM/config/: horizon_debug.yaml  horizon_test.yaml  mid360.yaml
FAST_LIO_SAM/include/: ult.h
FAST_LIO_SAM/launch/: mapping_horizon_debug.launch  mapping_horizon_indoor.launch  mapping_mid360_indoor.launch
FAST_LIO_SAM/rviz_cfg/: loam_livox.rviz
FAST_LIO_SAM/src/: laserMapping.cpp  laserMapping.cu  livox_repub.cpp  preprocess.cpp  savePointCloud.cpp
elevation_mapping/elevation_mapping/: CMakeLists.txt
gpr/: CMakeLists.txt  package.xml
gpr/src/: gpr_path.cpp
include/Estimator/: Estimator.h
kindr_ros/kindr_ros/: CMakeLists.txt
livox_horizon_loam/: CMakeLists.txt
livox_horizon_loam/launch/: loam_livox_horizon.launch  loam_livox_horizon_ext_imu.launch  loam_livox_horizon_imu.launch  my_loam_livox_horizon_imu.launch  my_loam_livox_horizon_imu_octomap.launch
oac_global_planner/: CMakeLists.txt  package.xml
oac_global_planner/config/: common.yaml  elevation_map.yaml  param.yaml  simulation.yaml  visual.yaml
oac_global_planner/config/for_simulation/: real_world.rviz  simulation.rviz  simulation1.rviz
oac_global_planner/include/: oac_global_planner.h  pf_rrt_planner.h  pf_rrt_planner_classes.h  pf_rrt_planner_vis.h
oac_global_planner/launch/: fast_lio_test.launch  run.launch  run_without_rviz.launch  sim_smaze_world.launch  test_elevation_map.launch
oac_global_planner/log/: bezire_curve.py  keypoint_log.txt  plot_log.txt  tree_plot.py  waypoint_log.txt
oac_global_planner/src/: local_obs.cpp  oac_global_planner.cpp  oac_global_planning_node.cpp  pf_rrt_planner.cpp  pf_rrt_planner_classes.cpp  pf_rrt_planner_vis.cpp
oac_global_planner/src/Hybrid_A_Star/: a_star.hpp
oac_local_planner/: CMakeLists.txt  package.xml
oac_local_planner/config/: local_planner_param.yaml
oac_local_planner/include/: oac_local_planner.h
oac_local_planner/src/: oac_local_planner.cpp  oac_local_planner_node.cpp  trajectory.py  trajectory.txt
oac_mapping/: CMakeLists.txt  package.xml
oac_mapping/config/: filter_chain.yaml
oac_mapping/include/: oac_mapping.h  segment.hpp
oac_mapping/src/: oac_mapping.cpp  oac_mapping_node.cpp
planner/: CMakeLists.txt  package.xml
planner/config/: local_planner_param.yaml  param.yaml  simulation.yaml
planner/config/for_simulation/: elevation_map.yaml  map1.yaml  param.yaml  simulation.rviz
planner/include/: global_planner.h  local_planner.h  minimum_jerk.h  planner.h  planner_classes.h  planner_vis.h
planner/launch/: allpoint.launch  bringup.launch  horizon.launch  mid360.launch  run.launch  run_without_rviz.launch  sim.launch  sim_smaze_world.launch  test_elevation_map.launch
planner/log/: 1.txt  keypoint_log.txt  plot_log.txt  waypoint_log.txt
planner/src/: global_planner.cpp  global_planning_node.cpp  local_obs.cpp  local_planner.cpp  local_planner_node.cpp  minimum_jerk.cpp  planner.cpp  planner_classes.cpp  planner_vis.cpp
rviz_plugins/: readme.txt
(+26 files in other folders)
